--- a/dawnsettings/Resources/ar.lproj/Translations.strings
+++ b/dawnsettings/Resources/ar.lproj/Translations.strings
@@ -2,7 +2,7 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>LOCALIZATION_CREDITS</key>
-	<string>الشكر للمترجمين</string>
+    <key>LOCALIZATION_CREDITS</key>
+    <string>اعتمادات التوطين</string>
 </dict>
 </plist>
